--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,11 @@
+
+/* @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css); */
+@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Jeju Gothic', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
